--- a/CIT230/basicpage.html
+++ b/CIT230/basicpage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Cody Bake   </h1>
-    <h2>Rexburg, WA </h2>
+    <h2>Rexburg, ID </h2>
     <p> Operating System: Windows10</p>
     <P> Ram:16GB</P>
     <P> Processor:Intel Core i7-6700HQ</P>
