--- a/CIT230/index.html
+++ b/CIT230/index.html
@@ -2,10 +2,26 @@
 <html lang="en-us">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="description" content=" ... ">
+    <link rel="stylesheet" href="css/main.css">
+    
+    <title>CIT 230 Assignment Portal | Cody J. Bake | BYU-Idaho</title>
 </head>
 <body>
-    
+    <header>
+            <p> <img src='C:\Users\Cody\Desktop\Schools\Winter2019\Cit230\images\cody2.png'> </p>
+        <h1> Cody Bake</h1>    
+    </header>
+    <main> 
+        <h2> CIT 230 = Assignment Portal</h2> 
+        <li>Lesson ##: <a href="#">Assignment Label</a></li>
+    </main>
+    <footer> 
+        <p>
+            &copy; 2019, Cody Bake, Idaho,<a href="http://www.byui.edu/online/">BYUI Online</a>
+        </p>   </footer>
+
 </body>
+</html>
