--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <header>
             <p> <img src='C:\Users\Cody\Desktop\Schools\Winter2019\Cit230\images\cody2.png'> </p>
-        <h1> Cody Bake</h1>    
+        <h1> Cody  &Bfr;&afr;k&efr;</h1>    
     </header>
     <main> 
         <h2> CIT 230 = Assignment Portal</h2> 
-        <li>Lesson ##: <a href="#">Assignment Label</a></li>
+        <li>Lesson ##: &rtri;<a href="#">Assignment Label</a></li>
     </main>
     <footer> 
         <p>
