--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
     </header>
     <main> 
         <h2> CIT 230 = Assignment Portal</h2> 
+        /
         <li>Lesson ##: <a href="#">Assignment Label</a></li>
         <li>Lesson 3<a href="codybake.github.io/assignments/lesson-3/fixedhtml.html">Assignment</a></li>
+    
+        codybake.github.io/assignments/lesson-3/fixedhtml.html
+      
     </main>
     <footer> 
         <p>
