--- a/assignments/lesson-3/fixedhtml.html
+++ b/assignments/lesson-3/fixedhtml.html
@@ -4,7 +4,14 @@
       <title>Untitled Document</title>
       <meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
       <style type="text/css">
-          .style1 {margin: 0 auto; border: 1px solid #bbb; padding: 5px; background-color: #eee; line-height: 1.5em;}
+          .style1 {
+            margin: 0 auto; 
+            border: 1px solid #bbb;
+            padding: 5px;
+            background-color: 
+            #eee; 
+            line-height: 1.5em;
+            }
      
           @-webkit-keyframes scroll {
 0% {
