--- a/Cit230/index.html
+++ b/Cit230/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <header>
-            <p> <img src='C:\Users\Cody\Desktop\Schools\Winter2019\Cit230\images\cody2.png'> </p>
+            <p> 
+                <img src='C:\Users\Cody\Desktop\Schools\Winter2019\Cit230\codybake.github.io\Cit230
+                '> </p>
         <h1> Cody  &Bfr;&afr;k&efr;</h1>    
     </header>
     <main> 
