--- a/Cit230/index.html
+++ b/Cit230/index.html
@@ -12,8 +12,7 @@
 <body>
     <header>
             <p> 
-                <img src='C:\Users\Cody\Desktop\Schools\Winter2019\Cit230\codybake.github.io\Cit230
-                '> </p>
+                <img src='C:\Users\Cody\Desktop\Schools\Winter2019\Cit230\codybake.github.io\Cit230'> </p>
         <h1> Cody  &Bfr;&afr;k&efr;</h1>    
     </header>
     <main> 
