--- a/Cit230/index.html
+++ b/Cit230/index.html
@@ -12,13 +12,13 @@
 <body>
     <header>
             <p> 
-                <img src='C:\Users\Cody\Desktop\Schools\Winter2019\Cit230\codybake.github.io\Cit230'> </p>
+                <img src='https://codybake.github.io/Cit230/cody2.png'> </p>
         <h1> Cody  &Bfr;&afr;k&efr;</h1>    
     </header>
     <main> 
         <h2> CIT 230 = Assignment Portal</h2> 
         <ul>
-        <li>Lesson 3 : <a href="C:\Users\Cody\Desktop\Schools\Winter2019\Cit230\codybake.github.io\assignments\lesson-3\fixedhtml.html">Assignment</a></li>
+        <li>Lesson 3 : <a href="C:\Users\Cody\Desktop\Schools\Winter2019\Cit230\codybake.github.io\Cit230\cody2.png">Assignment</a></li>
     </ul>
 
 
