--- a/Cit230/fixedhtml.html
+++ b/Cit230/fixedhtml.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
   <head>
       <title>Untitled Document</title>
@@ -7,12 +7,13 @@
           .style1 {margin: 0 auto; border: 1px solid #bbb; padding: 5px; background-color: #eee; line-height: 1.5em;}
      
           @-webkit-keyframes scroll {
-0% {
-    -webkit-transform: translate(0,0);
-}
-100% {
-    -webkit-transform: translate(-100%, 0);
-}
+                        0% {
+                -webkit-transform: translate(0,0);
+    }
+                        100% {
+                -webkit-transform: translate(-100%, 0);
+    
+                }
     }
     .marquee {
         display:block;
@@ -44,7 +45,7 @@
                 <li><a href="search/">Search</a></li>
     </ul>
     </div>
-<div id="main">
+<main>
 </div>
     <p><img src="http://lorempixel.com/300/200/transport" width="300" height="200" alt="lorepix"></p>
     <h3>Featured Products & Services</h3>        
@@ -57,6 +58,7 @@
     <li>Product 2</li>
     <li>Product 3</li>
  </ul>
+ </main>
  <div class="style1 right">
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dictum urna dui. Ut imperdiet facilisis sapien. Nunc ultrices sem eget ligula hendrerit pulvinar non et tellus. Ut dignissim vel ipsum sagittis faucibus. Aenean iaculis eleifend nulla id rhoncus. Cras velit leo, maximus et finibus a, molestie eget quam. 
  </div><br><br><br><br>
@@ -64,18 +66,15 @@
  <p>Locations
  <ol>
      <li><a href="http://www.clarkston.com/business-directory-2/">Clarkston Washington</a></li>
-  <li><a href="http://www.lewiston.com/business-directory-2-2/">LEWISTON IDAHO</a></li>
+    <li><a href="http://www.lewiston.com/business-directory-2-2/">LEWISTON IDAHO</a></li>
     <li><a href="http://www.moscow.com/business-directory-2/">Moscow ID</a></li>
 </ol>
 
- <div id="footer">
-       <p>Copyright -C- 2016 |  The Quad-Cities Transporation Center   | Spokane Washington </p>
-        <p>To find out more, contact Bobby at 4455.
-            </p>
-
-
-            <p class="marquee"><span>Subscribe to our Newsletter to get daily specials emailed to you directly!!</span></p></div>
-
+ <footer>
+        <p>Copyright -C- 2016 |  The Quad-Cities Transporation Center   | Spokane Washington </p>
+        <p>To find out more, contact Bobby at 4455.</p>
+        <p class="marquee"><span>Subscribe to our Newsletter to get daily specials emailed to you directly!!</span></p></div>
+</footer>
 
 </body>
 </html> 
