--- a/Cit230/index.html
+++ b/Cit230/index.html
@@ -11,24 +11,20 @@
 </head>
 <body>
     <header>
-            <p> 
-                <img src='https://codybake.github.io/Cit230/cody2.png'> </p>
+            <p> <img src='https://codybake.github.io/Cit230/cody2.png'> </p>
         <h1> Cody  &Bfr;&afr;k&efr;</h1>    
     </header>
     <main> 
         <h2> CIT 230 = Assignment Portal</h2> 
         <ul>
-        <li>Lesson 3 : <a href="C:\Users\Cody\Desktop\Schools\Winter2019\Cit230\codybake.github.io\Cit230\cody2.png">Assignment</a></li>
+        <li>Lesson 3 : <a href="codybake.github.io/Cit230/fixedhtml.html">Assignment</a></li>
     </ul>
-
-
-
     </main>
-
     <footer> 
         <p>
             &copy; 2019, Cody Bake, Idaho,<a href="http://www.byui.edu/online/">BYUI Online</a>
-        </p>   </footer>
+        </p>   
+    </footer>
 
 </body>
 </html>
