--- a/Cit230/index.html
+++ b/Cit230/index.html
@@ -17,7 +17,9 @@
     <main> 
         <h2> CIT 230 = Assignment Portal</h2> 
         <ul>
-        <li>Lesson 3 : <a href="https://codybake.github.io/Cit230/fixedhtml.html">Assignment</a></li>
+        <li>Lesson 3 : <a href="fixedhtml.html">Assignment</a></li>
+        <li>Lesson 4 : <a href="">Assignment</a></li>
+   
     </ul>
     </main>
     <footer> 
