--- a/Cit230/index.html
+++ b/Cit230/index.html
@@ -18,7 +18,7 @@
         <h2> CIT 230 = Assignment Portal</h2> 
         <ul>
         <li>Lesson 3 : <a href="fixedhtml.html">Assignment</a></li>
-        <li>Lesson 4 : <a href="lesson-4">Assignment</a></li>
+        <li>Lesson 4 : <a href="lesson-4/Preston-4.html">Assignment</a></li>
    
     </ul>
     </main>
