--- a/Cit230/lesson-4/Preston-4.html
+++ b/Cit230/lesson-4/Preston-4.html
@@ -6,7 +6,7 @@
     , initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shredding Weather</title>
-    <link rel="stylesheet" href="C:\Users\Cody\Desktop\Schools\Winter2019\Cit230\codybake.github.io\Cit230\lesson-4\styles\small-4.css">
+    <link rel="stylesheet" href="https://codybake.github.io/Cit230/lesson-4/styles/small-4.css">
 </head>
 <body>
     <ul>
