--- a/Cit230/lesson-4/Preston-4.html
+++ b/Cit230/lesson-4/Preston-4.html
@@ -2,27 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
+    <meta name="viewport" content="width= , initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shredding Weather</title>
     <link rel="stylesheet" href="https://codybake.github.io/Cit230/lesson-4/styles/small-4.css">
+    <link rel="stylesheet" href="C:\Users\Cody\Desktop\Schools\Winter2019\Cit230\codybake.github.io\Cit230\lesson-4\styles\small-4.css">
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Cinzel|Monoton" rel="stylesheet">
+    <style>  
+    *{  font-family: 'Cinzel', serif; }
+    </style>
+
 </head>
 <body>
+    <h1> Weather site </h1>
     <ul>
         <li>Home</li>
         <li>Preston</li>
         <li>Soda Springs</li>
-        <li>Fish Haven </li>
-        <li>Storm Center </li>
+        <li>Fish Haven</li>
+        <li>Storm Center</li>
         <li>Gallery</li>
     </ul>
     <nav>   
-    <h1> Weather site </h1>
+    
         <div class="motto"></div>
     </nav>
 <main>  
-
 
 </main>
     <footer>
