--- a/Cit230/lesson-4/Preston-4.html
+++ b/Cit230/lesson-4/Preston-4.html
@@ -7,7 +7,7 @@
     <title>Shredding Weather</title>
     <link rel="stylesheet" href="https://codybake.github.io/Cit230/lesson-4/styles/small-4.css">
     <link rel="stylesheet" href="C:\Users\Cody\Desktop\Schools\Winter2019\Cit230\codybake.github.io\Cit230\lesson-4\styles\small-4.css">
-    <link href="https://fonts.googleapis.com/css?family=Cinzel|Monoton|Mr+Dafoe" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Monoton|ubuntu" rel="stylesheet">
     <style>  
     *{font-family: 'Cinzel', serif; }
     </style>
