--- a/Cit230/lesson-4/Preston-4.html
+++ b/Cit230/lesson-4/Preston-4.html
@@ -14,7 +14,11 @@
 
 </head>
 <body>
-    <h1> Weather site </h1>
+    <header> 
+        
+         <p> <img src='/lesson-4/images/Weather%20siteimg.png'> </p>
+        <h1> Weather site </h1>
+    </header>
     <ul>
         <li>Home</li>
         <li>Preston</li>
