--- a/Cit230/lesson-4/Preston-4.html
+++ b/Cit230/lesson-4/Preston-4.html
@@ -16,8 +16,9 @@
 <body>
     <header> 
         
-         <p> <img src='/lesson-4/images/Weather%20siteimg.png'> </p>
+        <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmpylK6UvJPvnxWzI7geADgQhjNY3OaFElpVkPZ7gKqm99Z4TDQQ'>
         <h1> Weather site </h1>
+        <h7>"It's always a fun time in the snow!"</h7>
     </header>
     <ul>
         <li>Home</li>
