--- a/Cit230/lesson-5/preston-5.html
+++ b/Cit230/lesson-5/preston-5.html
@@ -30,7 +30,6 @@
         <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmpylK6UvJPvnxWzI7geADgQhjNY3OaFElpVkPZ7gKqm99Z4TDQQ'>
         <h1> Weather site </h1>
         <h7>"It's always a fun time in the snow!"</h7>
-
 <h1> The Weather Site </h1>
 <h2> Second line</h2>
 <ul>    
@@ -64,6 +63,8 @@
 </main>
 <footer>  
     <p>  &commat; 2019 | Shredding Weather | Cody Bake</p>
+   
+    <img src= 'https://codybake.github.io/Cit230/lesson-4/images/Shredding.png'>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47365.72628262632!2d-111.91534449995848!3d42.099805311916796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C+ID+83263!5e0!3m2!1sen!2sus!4v1549479971234" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>    <p> &copy;</p>
 </footer>
 
