--- a/Cit230/lesson-5/preston-5.html
+++ b/Cit230/lesson-5/preston-5.html
@@ -38,11 +38,11 @@
 <ul> 
     
     <li class ="active"><a href="#home"> Home </a></li>
-    <li class ="active"><a href="#Preston"> Preston </a></li>
-    <li class ="active"><a href="#Soda Springs"> Soda Springs </a></li>
-    <li class ="active"><a href="#Fish Haven"> Fish Haven </a></li>
-    <li class ="active"><a href="#Storm Center"> Storm Center </a></li>
-    <li class ="active"><a href="#Gallery"> Gallery </a></li>
+    <li> <a href="#Preston"> Preston </a></li>
+    <li> <a href="#Soda Springs"> Soda Springs </a></li>
+    <li ><a href="#Fish Haven"> Fish Haven </a></li>
+    <li ><a href="#Storm Center"> Storm Center </a></li>
+    <li ><a href="#Gallery"> Gallery </a></li>
 </ul>
     </header>
     <main>
